--- a/courses.html
+++ b/courses.html
@@ -22,7 +22,11 @@
 
 <header class="header">
 
-   <a href="#" class="logo"> <i class="fas fa-lightbulb"></i> educa </a>
+   <a href="#" class="logo"> 
+      <!-- <i class="fas fa-lightbulb"></i> educa  -->
+      <img src="files/t2.png" alt="">
+   
+   </a>
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
