--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">home</a>
+      <a href="index.html">home</a>
       <a href="about.html">about</a>
       <a href="courses.html">courses</a>
       <a href="contact.html">contact</a>
@@ -54,7 +54,7 @@
       <span class="btn register-btn">register</span>
    </div>
 
-   <form class="login-form active" action="">
+   <!-- <form class="login-form active" action="">
       <h3>login now</h3>
       <input type="email" placeholder="enter your email" class="box">
       <input type="password" placeholder="enter your password" class="box">
@@ -72,7 +72,7 @@
       <input type="password" placeholder="enter your password" class="box">
       <input type="password" placeholder="confirm your password" class="box">
       <input type="submit" value="register now" class="btn">
-   </form>
+   </form> -->
 
 </div>
 
@@ -88,7 +88,7 @@
       
       <div class="swiper-wrapper">
 
-         <section class="swiper-slide slide" style="background: url(images/home-slide-1.jpg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(files/h1.png) no-repeat;">
             <div class="content">
                <h3>the best courses you will find find here!</h3>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde, quidem corrupti?</p>
@@ -96,7 +96,7 @@
             </div>
          </section>
 
-         <section class="swiper-slide slide" style="background: url(images/home-slide-2.jpg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(files/h2.png) no-repeat;">
             <div class="content">
                <h3>the best courses you will find find here!</h3>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde, quidem corrupti?</p>
@@ -104,7 +104,7 @@
             </div>
          </section>
 
-         <section class="swiper-slide slide" style="background: url(images/home-slide-3.jpg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(files/h3.png) no-repeat;">
             <div class="content">
                <h3>the best courses you will find find here!</h3>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde, quidem corrupti?</p>
@@ -126,44 +126,45 @@
 
 <section class="subjects">
 
-   <h1 class="heading">our popular subjects</h1>
+   <h1 class="heading">Our Popular Diploma Courses</h1>
 
    <div class="box-container">
 
       <div class="box">
-         <img src="images/subject-icon-1.png" alt="">
-         <h3>graphic design</h3>
-         <p>12 modules</p>
+         <img src="files/d6.png" alt="">
+         <h3>Healthcare Management</h3>
+         <p>12 Months</p>
       </div>
 
       <div class="box">
-         <img src="images/subject-icon-2.png" alt="">
-         <h3>mathemetics</h3>
-         <p>12 modules</p>
+         <img src="files/d5.png" alt="">
+         <h3>Professional Accounting</h3>
+         <p>6 Months</p>
       </div>
 
       <div class="box">
-         <img src="images/subject-icon-3.png" alt="">
-         <h3>teaching</h3>
-         <p>12 modules</p>
+         <img src="files/d4.png" alt="">
+         <h3>Professional HR Management</h3>
+         <p>6 Months</p>
       </div>
 
       <div class="box">
-         <img src="images/subject-icon-4.png" alt="">
-         <h3>development</h3>
-         <p>12 modules</p>
+         <img src="files/d1.png" alt="">
+         <h3>Digital <br>
+            Marketing</h3>
+         <p>6 Months</p>
       </div>
 
       <div class="box">
-         <img src="images/subject-icon-5.png" alt="">
-         <h3>science</h3>
-         <p>12 modules</p>
+         <img src="files/d3.png" alt="">
+         <h3>Logistics <br> Course</h3>
+         <p>6 Months</p>
       </div>
 
       <div class="box">
-         <img src="images/subject-icon-6.png" alt="">
-         <h3>engineering</h3>
-         <p>12 modules</p>
+         <img src="files/d2.png" alt="">
+         <h3>Building <br> Design</h3>
+         <p>6 Months</p>
       </div>
 
    </div>
@@ -277,7 +278,14 @@
    <div class="box-container">
 
       <div class="box">
-         <h3> <i class="fas fa-lightbulb"></i> educa </h3>
+         <!-- <h3> <i class="fas fa-lightbulb"></i> educa </h3> -->
+
+         <a href="#" class="logo"> 
+            <!-- <i class="fas fa-lightbulb"></i> educa  -->
+            <img src="files/t2.png" alt="">
+         
+         </a>
+
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatem.</p>
          <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
