--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">home</a>
+      <a href="index.html">home</a>
       <a href="about.html">about</a>
       <a href="courses.html">courses</a>
       <a href="contact.html">contact</a>
@@ -54,7 +54,7 @@
       <span class="btn register-btn">register</span>
    </div>
 
-   <form class="login-form active" action="">
+   <!-- <form class="login-form active" action="">
       <h3>login now</h3>
       <input type="email" placeholder="enter your email" class="box">
       <input type="password" placeholder="enter your password" class="box">
@@ -72,7 +72,7 @@
       <input type="password" placeholder="enter your password" class="box">
       <input type="password" placeholder="confirm your password" class="box">
       <input type="submit" value="register now" class="btn">
-   </form>
+   </form> -->
 
 </div>
 
