--- a/index.html
+++ b/index.html
@@ -185,73 +185,73 @@
 
          <div class="swiper-slide slide">
             <div class="image">
-               <img src="files/a1.png" alt="">
-               <h3>web development</h3>
+               <img src="files/aa1.png" alt="">
+               <h3>Digital Marketing</h3>
             </div>
             <div class="content">
-               <h3>web development</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-               <a href="#" class="btn">read more</a>
+               <h3>Digital Marketing</h3>
+               <p>Leran Digital Marketing the Next Generation Advertising in 45 Days</p>
+               <a href="./files/DIGITAL MARKETING BROCHURE.pdf" class="btn" download>Brochure</a>
             </div>
          </div>
 
          <div class="swiper-slide slide">
             <div class="image">
-               <img src="files/a2.png" alt="">
-               <h3>web development</h3>
+               <img src="files/aa2.png" alt="">
+               <h3>Medical Coding</h3>
             </div>
             <div class="content">
-               <h3>web development</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-               <a href="#" class="btn">read more</a>
+               <h3>Medical Coding</h3>
+               <p>Convert healthcare diagnosis, procedures, medical services, and equipment into universal medical alphanumeric codes in 45 Days</p>
+               <a href="./files/Medical coding.pdf" class="btn" download>read more</a>
             </div>
          </div>
 
          <div class="swiper-slide slide">
             <div class="image">
-               <img src="files/a3.png" alt="">
-               <h3>web development</h3>
+               <img src="files/aa3.png" alt="">
+               <h3>Healthcare Management</h3>
             </div>
             <div class="content">
-               <h3>web development</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-               <a href="#" class="btn">read more</a>
+               <h3>Healthcare Management</h3>
+               <p>Learn about healthcare institutes, hospital buildings, designing, planning, and benchmarking in the healthcare industry</p>
+               <a href="./files/cc healthcare management.pdf" class="btn" download>read more</a>
             </div>
          </div>
 
          <div class="swiper-slide slide">
             <div class="image">
-               <img src="images/course-1-4.png" alt="">
-               <h3>web development</h3>
+               <img src="files/a4.png" alt="">
+               <h3>Graphic designing</h3>
             </div>
             <div class="content">
-               <h3>web development</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-               <a href="#" class="btn">read more</a>
+               <h3>Graphic designing</h3>
+               <p>Learn what you need to know to break into the world of graphic design.</p>
+               <a href="./files/GRAPHIC DESIGN BROCHURE 2.pdf" class="btn" download>read more</a>
             </div>
          </div>
 
          <div class="swiper-slide slide">
             <div class="image">
-               <img src="images/course-1-5.png" alt="">
-               <h3>web development</h3>
+               <img src="files/a5.png" alt="">
+               <h3>Java programming</h3>
             </div>
             <div class="content">
-               <h3>web development</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-               <a href="#" class="btn">read more</a>
+               <h3>Java programming</h3>
+               <p>a robust programming language used to create software, web and mobile apps, </p>
+               <a href="./files/JAVA.pdf" class="btn" download>read more</a>
             </div>
          </div>
 
          <div class="swiper-slide slide">
             <div class="image">
-               <img src="images/course-1-6.png" alt="">
-               <h3>web development</h3>
+               <img src="files/a6.png" alt="">
+               <h3>Python programming</h3>
             </div>
             <div class="content">
-               <h3>web development</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-               <a href="#" class="btn">read more</a>
+               <h3>Python programming</h3>
+               <p>online program is designed for anyone who is interested in acquiring programming skills in Python.</p>
+               <a href="./files/Python.pdf" class="btn" download>read more</a>
             </div>
          </div>
 
