--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    </nav>
 
    <div class="icons">
-      <div id="account-btn" class="fas fa-user"></div>
+      <a href="https://wa.me/9811058889"><div id="account-btn" class="fab fa-whatsapp-square" ></div></a>
       <div id="menu-btn" class="fas fa-bars"></div>
    </div>
 
@@ -50,8 +50,8 @@
    <div id="close-form" class="fas fa-times"></div>
 
    <div class="buttons">
-      <span class="btn active login-btn">login</span>
-      <span class="btn register-btn">register</span>
+      <span class="btn active login-btn">Redirecting to</span>
+      <span class="btn register-btn">Whatsapp</span>
    </div>
 
    <!-- <form class="login-form active" action="">
@@ -203,7 +203,7 @@
             <div class="content">
                <h3>Medical Coding</h3>
                <p>Convert healthcare diagnosis, procedures, medical services, and equipment into universal medical alphanumeric codes in 45 Days</p>
-               <a href="./files/Medical coding.pdf" class="btn" download>read more</a>
+               <a href="./files/Medical coding.pdf" class="btn" download>Brochure</a>
             </div>
          </div>
 
@@ -215,7 +215,7 @@
             <div class="content">
                <h3>Healthcare Management</h3>
                <p>Learn about healthcare institutes, hospital buildings, designing, planning, and benchmarking in the healthcare industry</p>
-               <a href="./files/cc healthcare management.pdf" class="btn" download>read more</a>
+               <a href="./files/cc healthcare management.pdf" class="btn" download>Brochure</a>
             </div>
          </div>
 
@@ -227,7 +227,7 @@
             <div class="content">
                <h3>Graphic designing</h3>
                <p>Learn what you need to know to break into the world of graphic design.</p>
-               <a href="./files/GRAPHIC DESIGN BROCHURE 2.pdf" class="btn" download>read more</a>
+               <a href="./files/GRAPHIC DESIGN BROCHURE 2.pdf" class="btn" download>Brochure</a>
             </div>
          </div>
 
@@ -239,7 +239,7 @@
             <div class="content">
                <h3>Java programming</h3>
                <p>a robust programming language used to create software, web and mobile apps, </p>
-               <a href="./files/JAVA.pdf" class="btn" download>read more</a>
+               <a href="./files/JAVA.pdf" class="btn" download>Brochure</a>
             </div>
          </div>
 
@@ -251,7 +251,7 @@
             <div class="content">
                <h3>Python programming</h3>
                <p>online program is designed for anyone who is interested in acquiring programming skills in Python.</p>
-               <a href="./files/Python.pdf" class="btn" download>read more</a>
+               <a href="./files/Python.pdf" class="btn" download>Brochure</a>
             </div>
          </div>
 
@@ -297,7 +297,7 @@
 
       <div class="box">
          <h3>quick links</h3>
-         <a href="home.html" class="link">home</a>
+         <a href="index.html" class="link">home</a>
          <a href="about.html" class="link">about</a>
          <a href="courses.html" class="link">courses</a>
          <a href="contact.html" class="link">contact</a>
@@ -323,7 +323,7 @@
 
    </div>
 
-   <div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>
+   <div class="credit"> Copyright (C) 2022. All rights reserved. </div>
 
 </section>
 
