--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
    </nav>
 
    <div class="icons">
-      <div id="account-btn" class="fas fa-user"></div>
+      <a href="https://wa.me/9811058889"><div id="account-btn" class="fab fa-whatsapp-square" ></div></a>
       <div id="menu-btn" class="fas fa-bars"></div>
    </div>
 
@@ -50,8 +50,8 @@
    <div id="close-form" class="fas fa-times"></div>
 
    <div class="buttons">
-      <span class="btn active login-btn">login</span>
-      <span class="btn register-btn">register</span>
+      <span class="btn active login-btn">Redirecting to</span>
+      <span class="btn register-btn">Whatsapp</span>
    </div>
 
    <!-- <form class="login-form active" action="">
@@ -82,7 +82,7 @@
 
 <section class="heading-link">
    <h3>contact us</h3>
-   <p> <a href="home.html">home</a> / contact </p>
+   <!-- <p> <a href="home.html">home</a> / contact </p> -->
 </section>
 
 <!-- contact section starts  -->
@@ -283,7 +283,7 @@
 
    </div>
 
-   <div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>
+   <div class="credit"> Copyright (C) 2022. All rights reserved. </div>
 
 </section>
 
