--- a/courses.html
+++ b/courses.html
@@ -37,7 +37,7 @@
    </nav>
 
    <div class="icons">
-      <a href="https://wa.me/9811058889"><div id="account-btn" class="fab fa-whatsapp-square" ></div></a>
+      <a href="https://wa.me/8848268586"><div id="account-btn" class="fab fa-whatsapp-square" ></div></a>
       <div id="menu-btn" class="fas fa-bars"></div>
    </div>
 
@@ -261,10 +261,10 @@
          <h3> <i class="fas fa-lightbulb"></i> educa </h3>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatem.</p>
          <div class="share">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://www.facebook.com/profile.php?id=100079709660026&mibextid=ZbWKwL" class="fab fa-facebook-f"></a>
+            <!-- <a href="#" class="fab fa-twitter"></a> -->
+            <a href="https://instagram.com/skilloraeduexperts" class="fab fa-instagram"></a>
+            <!-- <a href="#" class="fab fa-linkedin"></a> -->
          </div>
       </div>
 
