--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
    </nav>
 
    <div class="icons">
-      <a href="https://wa.me/8848268586"><div id="account-btn" class="fab fa-whatsapp-square" ></div></a>
+      <a href="https://wa.me/+918848268586"><div id="account-btn" class="fab fa-whatsapp-square" ></div></a>
       <div id="menu-btn" class="fas fa-bars"></div>
    </div>
 
