--- a/contact.html
+++ b/contact.html
@@ -152,61 +152,61 @@
 
       <div class="accordion active">
          <div class="accordion-heading">
-            <h3>how to contact for help?</h3>
+            <h3>How can I join?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            you can signup in our website or you can directly connect our customer support number or mail support@skilloraedu.com
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>what is the best career in 2022?</h3>
+            <h3>Is there any individual session?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            Yes we have individual sessions for every course
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>how much fees for web development?</h3>
+            <h3>Whether will get offline classes too?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            No we don't have any offline sessions we have only live online sessions
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>can I choose my own tutor?</h3>
+            <h3>Class timings?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            We are having all our classes in between 6pm to 10pm
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>what payment methods are availabe?</h3>
+            <h3>How can I do the payment?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            you can pay direct to the company account or to the payment link or Qr which our executives
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>can I have free trial for a month?</h3>
+            <h3>How I will connect with the teacher</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            After your admission we will be assign to a group through that you can connect to the tutor and also you can connect tutor directly by call in between 10am to 6pm
          </p>
       </div>
 
